Add in all files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.main.web-application-type=REACTIVE
+spring.main.allow-bean-definition-overriding=true
+logging.level.org.springframework.data.r2dbc=INFO
+spring.r2dbc.url=r2dbc:mysql://localhost:3366/inventory
+spring.r2dbc.initialization-mode=always
+spring.r2dbc.username=root
+spring.r2dbc.password=root
